update modelo de usuarios

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=2022
-MONGODB_CNN=mongodb://localhost:27017/aliwawa
+MONGODB_CNN=mongodb://localhost:27017/etaxes
 
 USER=apalaciosadmin
 PASS=Im2wkxCB1IeAy02d
