--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "googleapis": "^112.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
     "yargs": "^17.3.1"
   }
