pagina carrito (no funcional)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.3",
     "intl-tel-input": "^17.0.19",
     "jquery": "^3.6.3",
+    "mdb-ui-kit": "^6.2.0",
     "ng2-tel-input": "^2.3.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
