--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.6.3",
     "mdb-ui-kit": "^6.2.0",
     "ng2-tel-input": "^2.3.0",
+    "ngx-toastr": "^16.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
