--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -37,7 +37,7 @@
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/intl-tel-input/build/js/intlTelInput.min.js"
+              "node_modules/intl-tel-input/build/js/intlTelInput.min.js",
             ]
           },
           "configurations": {
