--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,11 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
     "intl-tel-input": "^17.0.19",
     "jquery": "^3.6.3",
     "mdb-ui-kit": "^6.2.0",
+    "ng2-charts": "^4.1.1",
     "ng2-tel-input": "^2.3.0",
     "ngx-toastr": "^16.1.0",
     "popper.js": "^1.16.1",
