--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "mdb-ui-kit": "^6.2.0",
     "ng2-charts": "^4.1.1",
     "ng2-tel-input": "^2.3.0",
+    "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
